--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,5 +1,5 @@
 <!-- Header (account) -->
-    <section class="header-account-page bg-primary d-flex align-items-end" data-offset-top="#header-main">
+    <section class="header-account-page bg-primary d-flex align-items-end" data-offset-top="#header-main" style="height: 180px">
       <!-- Header container -->
       <div class="container pt-4 pt-lg-0">
         <div class="row">
