--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -24,7 +24,7 @@
               </li>
               <li class="nav-item">
               <%= link_to edit_user_registration_path, method: "GET" do %>
-                <button type="button" class="btn btn-soft-primary btn-icon btns-sm"> Profil </button>
+                <button type="button" class="btn btn-soft-primary btn-icon btn-sm"> Profil </button>
               <% end %>
               <%= link_to destroy_user_session_path, method: "DELETE" do %>
                 <button type="button" class="btn btn-soft-danger btn-icon btn-sm"> Déconnexion </button>
