--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -62,7 +62,7 @@
           <form>
             <div class="form-group mb-0">
               <div class="input-group input-group-lg input-group-merge rounded-pill bg-white">
-                <input type="email" class="form-control form-control-flush" name="email" placeholder="Enter your email address" aria-label="Enter your email address">
+                <input type="email" class="form-control form-control-flush" name="email" placeholder="Laisse ton email pour une adoption à venir" aria-label="Enter your email address">
                 <div class="input-group-append">
                   <button class="btn btn-white text-dark" type="button">
                     <span class="far fa-paper-plane"></span>
