--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -111,7 +111,7 @@
                   <h1 class="text-white">Try a new experience</h1>
                   <p class="lead text-white mt-2">And make our beloved cats happier than ever.</p>
                 </div>
-                <a href="#" class="btn btn-white btn-icon rounded-pill shadow hover-shadow-lg hover-translate-y-n3">
+                <a href="/products" class="btn btn-white btn-icon rounded-pill shadow hover-shadow-lg hover-translate-y-n3">
                   <span class="btn-inner--text">Get started</span>
                   <span class="btn-inner--icon"><i class="fas fa-angle-right"></i></span>
                 </a>
