--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -26,7 +26,7 @@
 <% else %>
 
 <!-- Header (account) -->
-<header class="header-account-page bg-primary d-flex align-items-end">
+<header class="header-account-page bg-primary d-flex align-items-end" style="height: 180px">
   <!-- Header container -->
   <div class="container">
     <div class="row">
@@ -34,29 +34,22 @@
         <!-- Salute + Small stats -->
         <div class="row align-items-center mb-4">
           <div class="col-md-5 mb-4 mb-md-0">
-            <span class="h2 mb-0 text-white d-block">Morning Heather</span>
-            <span class="text-white">Have a nice day!</span>
+            <span class="h2 mb-0 text-white d-block">Hello, <%= @user.first_name %></span>
+            <span class="text-white">Comment chat va ?</span>
           </div>
         </div>
         <!-- Account navigation -->
         <div class="d-flex">
           <div class="btn-group btn-group-nav shadow" role="group" aria-label="Basic example">
             <div class="btn-group" role="group">
-              <a href="checkout-cart.html" class="btn btn-white btn-icon">
-                <span class="btn-inner--icon"><i class="fas fa-shopping-cart"></i></span>
-                <span class="btn-inner--text d-none d-md-inline-block">Panier</span>
-              </a>
-              <a href="checkout-customer.html" class="btn btn-white btn-icon">
-                <span class="btn-inner--icon"><i class="fas fa-user"></i></span>
-                <span class="btn-inner--text d-none d-md-inline-block">Profil client</span>
-              </a>
-              <a href="checkout-shipping.html" class="btn btn-white btn-icon">
-                <span class="btn-inner--icon"><i class="fas fa-truck"></i></span>
-                <span class="btn-inner--text d-none d-md-inline-block">Livraison</span>
-              </a>
-              <a href="checkout-payment.html" class="btn btn-white btn-icon">
-                <span class="btn-inner--icon"><i class="fas fa-credit-card"></i></span>
-                <span class="btn-inner--text d-none d-md-inline-block">Paiement</span>
+              <%= link_to cart_path, method: "GET" do %>
+                <button type="button" class="btn btn-white btn-icon"><span class="btn-inner--icon"><i class="fas fa-shopping-cart"></i></span>
+                <span class="btn-inner--text d-none d-md-inline-block">Panier</span></button>
+              <% end %>
+              <%= link_to edit_user_registration_path, method: "GET" do %>
+                <button type="button" class="btn btn-white btn-icon"><span class="btn-inner--icon"><i class="fas fa-user"></i></span>
+                <span class="btn-inner--text d-none d-md-inline-block">Mon Profil</span></button>
+              <% end %>
               </a>
             </div>
           </div>
