--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -4,7 +4,8 @@
       <div class="row align-items-md-center">
         <div class="col-md-4 mb-4 mb-md-0">
           <div class="d-flex align-items-center">
-            <p class="text-sm mb-0">© Cats for sale. 2019 <a href="https://www.thehackingproject.org/" target="_blank">THP</a>. All rights reserved.</p>
+            <p class="text-sm mb-0">© Des chats et des lignes de code. 2019.
+              <a href="https://www.thehackingproject.org/" target="_blank">THP</a></p>
           </div>
         </div>
         <div class="col-sm-6 col-md-4 mb-4 mb-sm-0">
@@ -23,23 +24,13 @@
         <div class="col-sm-6 col-md-4">
           <ul class="nav justify-content-center justify-content-md-end mt-3 mt-md-0">
             <li class="nav-item">
-              <a class="nav-link" href="https://dribbble.com/webpixels" target="_blank">
-                <i class="fab fa-dribbble"></i>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="https://www.instagram.com/webpixelsofficial" target="_blank">
+              <a class="nav-link" href="https://www.instagram.com/cats_of_instagram/" target="_blank">
                 <i class="fab fa-instagram"></i>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="https://github.com/webpixels" target="_blank">
+              <a class="nav-link" href="https://github.com/catsofthp" target="_blank">
                 <i class="fab fa-github"></i>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="https://www.facebook.com/webpixels" target="_blank">
-                <i class="fab fa-facebook"></i>
               </a>
             </li>
           </ul>
