--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -58,7 +58,7 @@
                     <% end %>
                   <% else %>
                     <%= link_to new_user_session_path do %>
-                      <button type="button" class="btn btn-primary btn-icon"> Please log in to purchase <i class='fas fa-shopping-bag'></i> </button>
+                      <button type="button" class="btn btn-soft-primary btn-icon"> Connecte toi pour pouvoir acheter  <i class='fas fa-shopping-bag'></i> </button>
                     <% end %>
                   <% end %>
                     <div id="notice-area"></div>
