--- a/app/views/devise/registrations/_orders.html.erb
+++ b/app/views/devise/registrations/_orders.html.erb
@@ -12,8 +12,8 @@
     <tbody class="list">
       <% orders.order("created_at DESC").each do |order| %>
         <tr>
-          <div id="orderInUserPage" type="button">
-            <th scope="row">
+          <div class="orderInUserPage" type="button">
+            <td scope="row">
               <div class="media align-items-center">
                 <div class="media-body pl-3">
                   <div class="lh-100 text-dark font-weight-bold mb-0">
@@ -21,7 +21,7 @@
                   </div>
                 </div>
               </div>
-            </th>
+            </td>
             <td class="date">
               <%= order.created_at %>
             </td>
@@ -30,14 +30,13 @@
                 <i class="bg-"></i>
                 <span class="status"><%= order.products.count %></span>
               </span>
-              </div>
-            </td>
+              </td>
             <td class="total">
               <%= order.payable_amount.round(2) %> €
             </td>
             <td class="text-right"></td>
           </div>
-          
+
           <!-- PARTIAL DE L ORDER -->
 
           <div class="collapse">
@@ -49,5 +48,3 @@
     </tbody>
   </table>
 </div>
-
-  
