update stripe chargeController for amount

--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -34,7 +34,7 @@
         <!-- Salute + Small stats -->
         <div class="row align-items-center mb-4">
           <div class="col-md-5 mb-4 mb-md-0">
-            <span class="h2 mb-0 text-white d-block">Hello, <%= @user.first_name %></span>
+            <span class="h2 mb-0 text-white d-block">Hello, <%= current_user.first_name %></span>
             <span class="text-white">Comment chat va ?</span>
           </div>
         </div>
