button chat-cheter

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -85,7 +85,7 @@
                   <div class="card-body text-center pt-0">
                     <h6><a href="#"><%= product.title %></a></h6>
                     <span class="card-price"><%= product.price %> €</span><br>
-                    <%= link_to 'Voir le chaton', product, class: "btn btn-outline-info btn-sm" %>
+                    <%= link_to 'Chat-fficher', product, class: "btn btn-soft-info btn-sm" %>
                   </div>
                   <div class="actions card-product-actions" data-animation-in="slideInLeft" data-animation-out="slideOutLeft">
                     <button type="button" class="action-item" data-toggle="tooltip" data-original-title="Add to cart">
@@ -108,10 +108,10 @@
             <div class="row justify-content-center">
               <div class="col-lg-6 col-xl-7 text-center">
                 <div class="mb-5">
-                  <h1 class="text-white">Try a new experience</h1>
-                  <p class="lead text-white mt-2">And make our beloved cats happier than ever.</p>
+                  <h1 class="text-white">Laisse toi tenter par une adoption.</h1>
+                  <p class="lead text-white text-center">Et rend nos chats plus heureux que jamais.</p>
                 </div>
-                <a href="/products" class="btn btn-white btn-icon rounded-pill shadow hover-shadow-lg hover-translate-y-n3">
+                <a href="/products" class="btn btn-primary btn-icon rounded-pill shadow hover-shadow-lg hover-translate-y-n3">
                   <span class="btn-inner--text">Get started</span>
                   <span class="btn-inner--icon"><i class="fas fa-angle-right"></i></span>
                 </a>
