--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -7,7 +7,7 @@
         <div class="col-lg-12 text-center">
           <h2 class="h1 text-white">Nos plus beaux chatons</h2><br>
           <p class="lead text-white mt-4">La vie c’est comme tenter de mettre des chatons dans un panier. Quand on y met le dernier, le premier est déjà de l’autre côté. <br><em>Séparation de coeur - Joanna Trollope</em></p>
-          <a href="#section02" class="btn btn-white rounded-pill mt-4 shadow hover-shadow-lg hover-translate-y-n3">Découvre nos plus belles espèces</a>
+          <a href="#section02" class="btn btn-success rounded-pill mt-4 shadow hover-shadow-lg hover-translate-y-n3">Découvre nos plus belles espèces</a>
         </div>
       </div>
     </div>
@@ -33,7 +33,8 @@
                 <%= product.description %>
               </p>
               <span class="card-price"><%= product.price %> €</span><br>
-              <%= link_to 'Miaou', product, class: "btn btn-soft-info btn-sm" %>
+              <%= link_to 'Chat-fficher', product, class: "btn btn-soft-info btn-sm" %>
+              <%= link_to 'Chat-cheter', product, class: "btn btn-soft-success btn-sm" %>
             </div>
             <div class="actions card-product-actions" data-animation-in="slideInLeft" data-animation-out="slideOutLeft">
               <button type="button" class="action-item" data-toggle="tooltip" data-original-title="Add to cart">
