--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -53,7 +53,7 @@
                 <div class="col-sm-6 text-sm-right">
                   <!-- Add to cart -->
                   <% if user_signed_in? %>
-                    <%= link_to carts_path(:product_id => @product.id), method: "POST", remote: true do %>
+                    <%= link_to carts_path(:product_id => @product.id, :origin => "product_page"), method: "POST", remote: true do %>
                       <button type="button" class="btn btn-soft-success btn-icon" id="addToCartBtn"> Ajouter au panier <i class='fas fa-shopping-bag'></i> </button>
                     <% end %>
                   <% else %>
