--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
 <header>
   <nav class="navbar navbar-horizontal navbar-expand-lg navbar-light bg-white">
     <div class="container">
-      <a class="navbar-brand" href="/products">NABOO</a>
+      <img alt="Image placeholder" src="https://image.noelshack.com/fichiers/2019/10/3/1551881449-screenshot-2019-03-06-at-15-10-38.png" width="5%" height="5%" class="img-fluid">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-primary" aria-controls="navbar-primary" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
