--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -5,9 +5,9 @@
     <div class="container py-6">
       <div class="row justify-content-center">
         <div class="col-lg-12 text-center">
-          <h2 class="h1 text-white">Nos plus beaux chatons</h2><br>
-          <p class="lead text-white mt-4">La vie c’est comme tenter de mettre des chatons dans un panier. Quand on y met le dernier, le premier est déjà de l’autre côté. <br><em>Séparation de coeur - Joanna Trollope</em></p>
-          <a href="#section02" class="btn btn-success rounded-pill mt-4 shadow hover-shadow-lg hover-translate-y-n3">Découvre nos plus belles espèces</a>
+          <h2 class="h1 text-white">Les plus beaux chatons à votre porte.</h2><br>
+          <p class="lead text-white mt-4 text-center">La vie c’est comme tenter de mettre des chatons dans un panier. Quand on y met le dernier, le premier est déjà de l’autre côté. <br><em>Séparation de coeur - Joanna Trollope</em></p>
+          <a href="#section02" class="btn btn-success rounded-pill mt-4 shadow hover-shadow-lg hover-translate-y-n3">Découvrez nos plus belles espèces</a>
         </div>
       </div>
     </div>
