--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -112,7 +112,7 @@
                   <p class="lead text-white text-center">Et rend nos chats plus heureux que jamais.</p>
                 </div>
                 <a href="/products" class="btn btn-primary btn-icon rounded-pill shadow hover-shadow-lg hover-translate-y-n3">
-                  <span class="btn-inner--text">Get started</span>
+                  <span class="btn-inner--text">Faire mon choix</span>
                   <span class="btn-inner--icon"><i class="fas fa-angle-right"></i></span>
                 </a>
               </div>
