--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -7,8 +7,9 @@
           <div class="row justify-content-center">
             <div class="col-lg-7">
               <div class="text-center">
+                <i class="fas fa-cat fa-8x"></i>
                 <h6 class="h4 my-4">Ton panier est vide.</h6>
-                <p class="px-md-5">
+                <p class="px-md-5 text-center">
                   Pour afficher un panier, il faudrait commencer par le remplir de chats...
                 </p>
                 <a href="/products" class="btn btn-sm btn-primary btn-icon rounded-pill mt-5">
@@ -20,6 +21,7 @@
           </div>
         </div>
       </section>
+
     </div>
   </div>
 
