--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="footer p-0 footer-dark bg-gradient-dark" id="footer-main">
+<footer class="footer p-0 footer p-0 footer-light bg-section-secondary" id="footer-main">
   <div class="container">
     <div class="py-4">
       <div class="row align-items-md-center">
