--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>TheGossipProject</title>
+  <title>Naboo</title>
   <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Open+Sans:300' type='text/css' />
   <%= render 'layouts/addon' %>
   <%= javascript_include_tag :application %>
