--- a/app/views/devise/registrations/_orders.html.erb
+++ b/app/views/devise/registrations/_orders.html.erb
@@ -12,36 +12,35 @@
     <tbody class="list">
       <% orders.order("created_at DESC").each do |order| %>
         <tr>
-          <div class="orderInUserPage" type="button">
-            <td scope="row">
-              <div class="media align-items-center">
-                <div class="media-body pl-3">
-                  <div class="lh-100 text-dark font-weight-bold mb-0">
-                    <%= order.id %>
-                  </div>
+          <td scope="row">
+            <div class="media align-items-center">
+              <div class="media-body pl-3">
+                <div class="lh-100 text-dark font-weight-bold mb-0">
+                  <%= order.id %>
                 </div>
               </div>
+            </div>
+          </td>
+          <td class="date">
+            <%= order.created_at %>
+          </td>
+          <td>
+            <span class="badge badge-dot ml-3">
+              <i class="bg-"></i>
+              <span class="status"><%= order.products.count %></span>
+            </span>
             </td>
-            <td class="date">
-              <%= order.created_at %>
-            </td>
-            <td>
-              <span class="badge badge-dot ml-3">
-                <i class="bg-"></i>
-                <span class="status"><%= order.products.count %></span>
-              </span>
-              </td>
-            <td class="total">
-              <%= order.payable_amount.round(2) %> €
-            </td>
-            <td class="text-right"></td>
-          </div>
+          <td class="total">
+            <%= order.payable_amount.round(2) %> €
+          </td>
+          <td>
+            <i class="fas fa-plus-square" id="showOrder<%=order.id%>" type="button"></i>
+          </td>
+          <td class="text-right"></td>
           
           <!-- PARTIAL DU CONTENU DE L' ORDER -->
 
-          <!-- <div class="collapse"> -->
-            <!-- <%= render 'orderproducts', order: order, products: Product.all.map { |product| if order.products.include?(product) then product end }.compact %> -->
-          <!-- </div> -->
+          <%= render 'orderproducts', order: order, products: Product.all.map { |product| if order.products.include?(product) then product end }.compact %>
           
           <tr class="table-divider"></tr>
         </tr>
