--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -147,9 +147,10 @@
             </div>
           </div>
           <!-- Save changes buttons -->
-
+          <br/>
           <!-- Show orders -->
           <div id="showOrders">
+            <h5 class="mb-1">Commandes</h5>
             <%= render "orders", orders: current_user.orders %>
           </div>
         <!-- Delete -->
