--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,7 +2,8 @@
   <nav class="navbar navbar-horizontal navbar-expand-lg navbar-light bg-white">
     <div class="container">
       <div class="collapse navbar-collapse" id="navbar-primary">
-        <img alt="Image placeholder" src="https://image.noelshack.com/fichiers/2019/10/3/1551881449-screenshot-2019-03-06-at-15-10-38.png" width="5%" height="5%" class="img-fluid">
+        <a href="/products">
+        <img alt="Image placeholder" src="https://image.noelshack.com/fichiers/2019/10/3/1551881449-screenshot-2019-03-06-at-15-10-38.png" width="8%" height="8%" class="img-fluid">
         <ul class="navbar-nav ml-lg-auto">
           <li class="nav-item">
             <a class="nav-link nav-link-icon" href="https://www.instagram.com/cats_of_instagram/">
