partials moved, admin dashboard created

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -151,7 +151,7 @@
           <!-- Show orders -->
           <div id="showOrders">
             <h5 class="mb-1">Commandes</h5>
-            <%= render "orders", orders: current_user.orders %>
+            <%= render "layouts/orders", orders: current_user.orders %>
           </div>
         <!-- Delete -->
         <div class="mt-5 pt-5 delimiter-top" id="deleteAccount">
