--- a/app/views/home/admin_dashboard.html.erb
+++ b/app/views/home/admin_dashboard.html.erb
@@ -60,8 +60,6 @@
           <!-- Change avatar -->
           <div class="card bg-gradient-warning hover-shadow-lg">
             <div class="card-body py-3">
-              
-                
               </div>
             </div>
           </div>
@@ -72,7 +70,13 @@
         <div class="row">
           <div class="col-md-12">
             <div class="form-group">
-             
+        <div>      
+          <% if current_user.is_admin %>
+            <%= link_to new_product_path, method: "GET" do %>
+              <button type="button" class="btn btn-soft-success btn-icon btn-sm">Poster une nouvelle annonce</button>
+            <% end %>
+          <% end %>
+        </div><br>
         <!-- Show orders -->
         <div id="showOrders">
           <h5 class="mb-1">Commandes</h5>
