--- a/app/views/charges/new.html.erb
+++ b/app/views/charges/new.html.erb
@@ -1,4 +1,8 @@
+<!----------------------------------------------------------------------->
+<!--DERNIERE MODIF-->
 <%= form_tag cart_charges_path do %>
+<!--cart_mon_panier_path-->
+
   <article>
     <% if flash[:error].present? %>
       <div id="error_explanation">
