--- a/app/views/user_mailer/welcome_order.html.erb
+++ b/app/views/user_mailer/welcome_order.html.erb
@@ -3,7 +3,14 @@
 <head>
   <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
 </head>
-<body>
+  <% @order.products.each do |product| %>
+    <%if product.avatar.attached?%>
+      <%= image_tag(product.avatar) %>
+    <%else%>
+      <img src="<%= product.image_url %>">
+    <%end%>
+<% end %>
+
 <h1>Salut et bienvenue chez nous !</h1>
 <p>
 Merci d'avoir commandé chez nous</p>
