--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -7,7 +7,7 @@
             <!-- Salute + Small stats -->
             <div class="row align-items-center mb-4">
               <div class="col-md-5 mb-4 mb-md-0">
-                <span class="h2 mb-0 text-white d-block">Hello, <%= @user.first_name %></span>
+                <span class="h2 mb-0 text-white">Hello, <%= @user.first_name %></span><br>
                 <span class="text-white">Comment chat va ?</span>
               </div>
               <div class="col-auto flex-fill d-none d-xl-block">
@@ -64,7 +64,7 @@
                   <div class="col-lg-8">
                     <div class="media align-items-center">
                       <div class="media-body">
-                        <h5 class="text-white mb-0"> Profil </h5>
+                        <h5 class="text-white mb-0"> Infos Générales </h5>
                       </div>
                     </div>
                   </div>
@@ -79,8 +79,7 @@
             </div>
         <!-- General information form -->
         <div class="actions-toolbar py-2 mb-4" id="showAccount">
-          <h5 class="mb-1">Infos générales</h5>
-          <p class="text-sm text-muted mb-0">Pour commander un de nos petits chatons, n'oublie pas de compléter ton comptes avec toutes tes informations personnelles.</p>
+          <p class="text-sm text-muted mb-0">Pour commander un de nos petits chatons, n'oublie pas de compléter ton compte avec toutes tes informations personnelles.</p>
         </div>
           <!-- EMAIL + PREVIOUS PASSWORD ROW -->
 
@@ -148,21 +147,29 @@
           </div>
           <!-- Save changes buttons -->
           <br/>
+          <div class="card bg-gradient-warning hover-shadow-lg">
+              <div class="card-body py-3">
+                <div class="row row-grid align-items-center">
+                  <div class="col-lg-8">
+                    <div class="media align-items-center">
+                      <div class="media-body">
+                        <h5 class="text-white mb-0 align-left">Commandes</h5>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-auto flex-fill mt-4 mt-sm-0 text-sm-right d-none d-lg-block">
+                    <a href="/products" class="btn btn-sm btn-white rounded-pill btn-icon shadow">
+                      <span class="btn-inner--icon"><i class="fas fa-fire"></i></span>
+                      <span class="btn-inner--text">Continuer mon shopping</span>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
           <!-- Show orders -->
           <div id="showOrders">
-            <h5 class="mb-1">Commandes</h5>
             <%= render "layouts/orders", orders: current_user.orders %>
           </div>
-        <!-- Delete -->
-        <div class="mt-5 pt-5 delimiter-top" id="deleteAccount">
-          <div class="actions-toolbar py-2 mb-4">
-            <h5 class="mb-1">Supprimer mon compte</h5>
-            <p class="text-sm text-muted mb-0">Supprimer ton compte est irréversible, et nous en sommes désolés, mais nous ne pouvons rien contre ton inchatichfaction...</p>
-          </div>
-        </div>
-        <!-- Button trigger modal -->
-        <p><%= button_to "Supprimer mon compte", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "btn btn-sm btn-danger" %></p>
-
       </div>
       <!-- FORM END -->
 
@@ -187,15 +194,6 @@
                 <div>
                   <i class="fas fa-cog mr-2"></i>
                   <span>Mes commandes</span>
-                </div>
-                <div>
-                  <i class="fas fa-angle-right"></i>
-                </div>
-              </a>
-              <a href="#deleteAccount" class="list-group-item list-group-item-action d-flex justify-content-between">
-                <div>
-                  <i class="fas fa-cog mr-2"></i>
-                  <span>Supprimer mon compte</span>
                 </div>
                 <div>
                   <i class="fas fa-angle-right"></i>
