--- a/app/views/home/admin_dashboard.html.erb
+++ b/app/views/home/admin_dashboard.html.erb
@@ -7,8 +7,8 @@
           <!-- Salute + Small stats -->
           <div class="row align-items-center mb-4">
             <div class="col-md-5 mb-4 mb-md-0">
-              <span class="h2 mb-0 text-white d-block">Hello, <%= current_user.first_name %></span>
-              <span class="text-white">Comment chat va ?</span>
+                <span class="h2 mb-0 text-white">Hello, <%= current_user.first_name %></span><br>
+                <span class="text-white">Comment chat va ?</span>
             </div>
             <div class="col-auto flex-fill d-none d-xl-block">
               <ul class="list-inline row justify-content-lg-end mb-0">
@@ -57,12 +57,6 @@
     <div class="container">
       <div class="row row-grid">
         <div class="col-lg-9 order-lg-2">
-          <!-- Change avatar -->
-          <div class="card bg-gradient-warning hover-shadow-lg">
-            <div class="card-body py-3">
-              </div>
-            </div>
-          </div>
       <!-- General information form -->
       
         <!-- EMAIL + PREVIOUS PASSWORD ROW -->
@@ -73,13 +67,31 @@
         <div>      
           <% if current_user.is_admin %>
             <%= link_to new_product_path, method: "GET" do %>
-              <button type="button" class="btn btn-soft-success btn-icon btn-sm">Poster une nouvelle annonce</button>
+              <button type="button" class="btn btn-soft-warning btn-icon btn-sm">Poster une nouvelle annonce</button>
             <% end %>
           <% end %>
         </div><br>
         <!-- Show orders -->
         <div id="showOrders">
-          <h5 class="mb-1">Commandes</h5>
+          <div class="card bg-gradient-warning hover-shadow-lg">
+              <div class="card-body py-3">
+                <div class="row row-grid align-items-center">
+                  <div class="col-lg-8">
+                    <div class="media align-items-center">
+                      <div class="media-body">
+                        <h5 class="text-white mb-0 align-left">Historique des Commandes</h5>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-auto flex-fill mt-4 mt-sm-0 text-sm-right d-none d-lg-block">
+                    <a href="/products" class="btn btn-sm btn-white rounded-pill btn-icon shadow">
+                      <span class="btn-inner--icon"><i class="fas fa-fire"></i></span>
+                      <span class="btn-inner--text">Back to business</span>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
           <%= render "layouts/orders", orders: Order.all %>
         </div>
 
