--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -6,11 +6,10 @@
 <body>
 <h1>Salut et bienvenue chez nous !</h1>
 <p>
-  Tu t'es inscrit sur monsite.fr en utilisant l'e-mail suivant :.
+  Tu t'es inscrit sur Naboo !
 </p>
 <p>
-  Pour accéder à ton espace client, connecte-toi via :.
 </p>
-<p> À très vite sur monsite.fr !
+<p> À très vite sur Naboo les super cats !
 </body>
 </html>
