--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,23 +1,21 @@
-<h1>Editing Product</h1>
+<h2>Edition de mon annonce</h2>
 
-<div class="col-md-6">
+<%= render 'form', product: @product %>
+<br>
+<div class="col-md-12 text-center">
   <div class="actions">
-    <%= link_to 'Go to Show Product', @product, class: "btn btn-sm btn-success" %>
-    <%= link_to 'Go to Root', products_path, class: "btn btn-sm btn-primary" %>
+    <%= link_to 'Voir le rendu produit', @product, class: "btn btn-sm btn-soft-success" %>
   </div>
 </div>
 
-<%= render 'form', product: @product %>
-<br />
-
-<h3>Changer d'image ?</h3>
+<h3>Upload une nouvelle image ?</h3>
 
 <%= form_tag product_avatars_path(@product), multipart: true do %>
   <div class="col-md-6">
     <div class="actions">
   <label for="file-1">
   </label>
-  <span class="btn btn-large btn-warning btn-file">
+  <span class="btn btn-large btn-soft-warning btn-file">
         <i class="fa fa-upload"></i>
     <span>Choose a file…</span>
     <%= file_field_tag :avatar %>
@@ -25,9 +23,9 @@
     </div>
   </div>
 <br />
-  <div class="col-md-6">
+  <div class="col-md-12 text-center">
     <div class="actions">
-      <%= submit_tag "Mettre à jour l'image", class: "btn btn-sm btn-primary" %>
+      <%= submit_tag "Mettre à jour l'image", class: "btn btn-sm btn-soft-primary" %>
     </div>
   </div>
   <br />
