--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,46 +1,48 @@
-<%= form_with(model: product, local: true) do |form| %>
-  <% if product.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(product.errors.count, "error") %> prohibited this product from being saved:</h2>
+<div class="text-center">
+  <%= form_with(model: product, local: true) do |form| %>
+    <% if product.errors.any? %>
+      <div id="error_explanation">
+        <h2><%= pluralize(product.errors.count, "error") %> prohibited this product from being saved:</h2>
 
-      <ul>
-      <% product.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+        <ul>
+        <% product.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+        </ul>
+      </div>
+    <% end %>
+    <div class="col-md-12">
+      <div class="form-group">
+    <div class="field">
+      <%= form.label :titre, class: "form-control-label" %>
+      <%= form.text_field :title, class: "form-control" %>
+    </div>
+      </div>
+    </div>
+
+    <div class="col-md-12">
+      <div class="form-group">
+    <div class="field">
+      <%= form.label :description, class: "form-control-label" %>
+      <%= form.text_area :description, class: "form-control" %>
+    </div>
+      </div>
+    </div>
+
+    <div class="col-md-12">
+      <div class="form-group">
+    <div class="field">
+      <%= form.label :prix, class: "form-control-label" %>
+      <%= form.text_field :price, class: "form-control" %>
+    </div>
+      </div>
+    </div>
+
+    <div class="col-md-12">
+      <div class="actions">
+        <%= form.submit "Mettre en page mon annonce", class: "btn btn-sm btn-soft-primary" %>
+      </div>
+    </div>
     </div>
   <% end %>
-  <div class="col-md-6">
-    <div class="form-group">
-  <div class="field">
-    <%= form.label :title, class: "form-control-label" %>
-    <%= form.text_field :title, class: "form-control" %>
-  </div>
-    </div>
-  </div>
-
-  <div class="col-md-6">
-    <div class="form-group">
-  <div class="field">
-    <%= form.label :description, class: "form-control-label" %>
-    <%= form.text_area :description, class: "form-control" %>
-  </div>
-    </div>
-  </div>
-
-  <div class="col-md-6">
-    <div class="form-group">
-  <div class="field">
-    <%= form.label :price, class: "form-control-label" %>
-    <%= form.text_field :price, class: "form-control" %>
-  </div>
-    </div>
-  </div>
-
-  <div class="col-md-6">
-    <div class="actions">
-      <%= form.submit "Mettre à jour", class: "btn btn-sm btn-primary" %>
-    </div>
-  </div>
-  </div>
-<% end %>
+</div>
