--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,5 +1,23 @@
-<h1>New Product</h1>
+ <div>
+   <div class="card bg-gradient-warning hover-shadow-lg">
+    <div class="card-body py-3">
+      <div class="row row-grid align-items-center">
+        <div class="col-lg-8">
+          <div class="media align-items-center">
+            <div class="media-body align-items-center">
+              <h5 class="text-white">Mettre un nouveau chaton sur le marché</h5>
+            </div>
+          </div>
+        </div>
+        <div class="col-auto flex-fill mt-4 mt-sm-0 text-sm-right d-none d-lg-block">
+          <a href="/products" class="btn btn-sm btn-white rounded-pill btn-icon shadow">
+            <span class="btn-inner--icon"><i class="fas fa-fire"></i></span>
+            <span class="btn-inner--text">Mes produits déja en vente</span>
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
 <%= render 'form', product: @product %>
-
-<%= link_to 'Back', products_path %>
