--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -79,9 +79,12 @@
       <section class="slice slice-lg delimiter-top" id="sct-suggested-products">
         <div class="container">
           <div class="mb-5 text-center">
+            <a href="#docileschats">
             <h3 class="h6">Nos chats les plus dociles<i class="fas fa-angle-down text-xs ml-3"></i></h3>
+            </a>
           </div>
           <div class="row">
+            <a name="docileschats"></a>
             <% @products.each do |product| %>
               <div class="col-lg-3 col-sm-6">
                 <div class="card card-product">
