--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -44,7 +44,7 @@
             </div>
             <!-- Account navigation -->
             <div class="d-flex">
-              <a href="account-profile-public.html" class="btn btn-icon btn-group-nav shadow btn-neutral">
+              <a href="#" class="btn btn-icon btn-group-nav shadow btn-neutral">
                 <span class="btn-inner--icon"><i class="fas fa-user"></i></span>
                 <span class="btn-inner--text d-none d-md-inline-block"><%= @user.first_name %> <%= @user.last_name %></span>
               </a>
