--- a/app/views/home/admin_dashboard.html.erb
+++ b/app/views/home/admin_dashboard.html.erb
@@ -44,7 +44,7 @@
           </div>
           <!-- Account navigation -->
           <div class="d-flex">
-            <a href="account-profile-public.html" class="btn btn-icon btn-group-nav shadow btn-neutral">
+            <a href="#" class="btn btn-icon btn-group-nav shadow btn-neutral">
               <span class="btn-inner--icon"><i class="fas fa-user"></i></span>
               <span class="btn-inner--text d-none d-md-inline-block"><%= current_user.first_name %> <%= current_user.last_name %></span>
             </a>
