--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -22,6 +22,9 @@
 
 
  */
+ html {
+   height: 100%;
+ }
 
  header {
    background: #F0F0F0;
@@ -29,4 +32,18 @@
 
 .navbar-nav li {
   white-space: nowrap;
+}
+
+body {
+position: relative;
+margin: 0;
+min-height: 100%;
+}
+
+footer {
+position: absolute;
+bottom: 0;
+right: 0;
+width:100%;
+height: 100px;
 }
