--- a/app/views/user_mailer/welcome_admin.html.erb
+++ b/app/views/user_mailer/welcome_admin.html.erb
@@ -6,7 +6,7 @@
 <body>
 <h1>Bonjour,</h1>
 <p>
-Vous avez reçu une commande de <% @order.user.email %></p>
+Vous avez reçu une commande de <%= @order.user.email %></p>
 <p>
 <p>
   Les articles commandés sont :
