--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -57,21 +57,11 @@
     <span class="mask bg-dark opacity-2"></span>
     <div class="container py-6">
       <div class="row justify-content-center">
-        <div class="col-lg-6 col-xl-6 text-center">
+        <div class="col-lg-8 col-xl-8 text-center">
           <div class="mb-5">
-            <h1 class="text-white">Livraison dans la journée</h1>
+            <h1 class="text-white">Livraison dans la journée</h1><br>
             <p class="lead text-white mt-1">Tous nos chats sont transportés dans les meilleures conditions possibles, et livrés avec un repas dans l'estomac, et une bouteille d'eau pour une meilleure hydratation.</p>
           </div>
-          <form>
-            <div class="form-group mb-0">
-              <div class="input-group input-group-lg input-group-merge rounded-pill bg-white">
-                <input type="email" class="form-control form-control-flush" name="email" placeholder="Laisse ton email pour une adoption à venir" aria-label="Enter your email address">
-                <div class="input-group-append">
-                  <button class="btn btn-white text-dark" type="button">
-                    <span class="far fa-paper-plane"></span>
-                  </button>
-                </div>
-              </div>
             </div>
           </form>
         </div>
