--- a/app/views/user_mailer/welcome_admin.html.erb
+++ b/app/views/user_mailer/welcome_admin.html.erb
@@ -6,7 +6,7 @@
 <body>
 <h1>Bonjour,</h1>
 <p>
-Vous avez reçu une commande de <% @order.user.email %></p>
+Vous avez reçu une commande de <%= @order.user.email %></p>
 <p>
 <p>
   Les articles commandés sont :
@@ -15,7 +15,7 @@ Vous avez reçu une commande de <% @order.user.email %></p>
   <% @order.products.each do |product| %>
 </p>
     <p>
-    - Titre : <% product.title %> Prix <% product.price %>
+    - Titre : <%= product.title %> Prix <%= product.price %>
     </p>
   <% end %>
   <% @order.products.each do |product| %>
@@ -25,6 +25,6 @@ Vous avez reçu une commande de <% @order.user.email %></p>
       <img src="<%= product.image_url %>">
     <%end%>
   <% end %>
-<p> À très vite sur monsite.fr !
+<p> À très vite sur naboo-shop.herokuapp.com !
 </body>
 </html>
