--- a/app/assets/javascripts/orders_scripts.js.erb
+++ b/app/assets/javascripts/orders_scripts.js.erb
@@ -9,18 +9,13 @@
     $('html,body').animate({scrollTop: aTag.offset().top},'slow');
   }
 
-  $("a[href='#deleteAccount']").on("click", function (event) { 
-    event.preventDefault()
-    scrollToAnchor("#deleteAccount")
-  })
-  $("a[href='#showAccount']").on("click", function (event) { 
-    event.preventDefault()
-    scrollToAnchor("#showAccount")
-  })
-  $("a[href='#showOrders']").on("click", function (event) { 
-    event.preventDefault()
-    scrollToAnchor("#showOrders")
-  })
+  function scrollToElement(id) { 
+    $(`a[href='${id}']`).on("click", function(event) { event.preventDefault(); scrollToAnchor(`${id}`) })
+  }
+
+  scrollToElement("#showAccount")
+  scrollToElement("#showOrders")
+  scrollToElement("#section02")
 
   let lastOrder = <%= Order.last.id %> 
   for(let i = 1; i <= lastOrder; i++) {
