--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -155,9 +155,11 @@
               </div>
             </div>
           <!-- Show orders -->
-          <div id="showOrders">
-            <%= render "layouts/orders", orders: current_user.orders %>
-          </div>
+          <% if current_user.orders.count >=1 %>
+            <div id="showOrders">
+              <%= render "layouts/orders", orders: current_user.orders %>
+            </div>
+          <% end %>
       </div>
       <!-- FORM END -->
 
