--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -109,7 +109,11 @@
               <div class="col-lg-3 col-sm-6">
                 <div class="card card-product">
                   <div class="card-image">
-                    <img alt="Image placeholder" src="<%= product.image_url %>" class="img-center img-fluid">
+                    <%if product.avatar.attached?%>
+                      <%= image_tag(product.avatar, alt: 'avatar', :class => "img-fluid") %>
+                    <%else%>
+                      <img alt="Image placeholder" src="<%= product.image_url %>" class="img-fluid">
+                    <%end%>
                   </div>
                   <div class="card-body text-center pt-0">
                     <h6><a href="#"><%= product.title %></a></h6>
