--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -157,7 +157,7 @@
           <!-- Show orders -->
           <% if current_user.orders.count >=1 %>
             <div id="showOrders">
-              <%= render "layouts/orders", orders: current_user.orders %>
+              <%= render "shared/orders", orders: current_user.orders %>
             </div>
           <% end %>
       </div>
