--- a/app/views/home/admin_dashboard.html.erb
+++ b/app/views/home/admin_dashboard.html.erb
@@ -92,7 +92,7 @@
                 </div>
               </div>
             </div>
-          <%= render "layouts/orders", orders: Order.all %>
+          <%= render "shared/orders", orders: Order.all %>
         </div>
 
     </div>
